<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mini_card"
        android:layout_marginTop="@dimen/margin_mini_card"
        android:layout_marginEnd="@dimen/margin_mini_card"
        android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_card_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_news"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/content_description_image_card"
                android:src="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_tittle_news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_card"
                android:layout_marginTop="@dimen/margin_default_card"
                android:layout_marginEnd="@dimen/margin_default_card"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView_news" />

            <TextView
                android:id="@+id/textView_description_news"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_card"
                android:layout_marginTop="@dimen/margin_mini_card"
                android:layout_marginEnd="@dimen/margin_default_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_tittle_news" />

            <TextView
                android:id="@+id/textView_news_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_card"
                android:layout_marginTop="@dimen/margin_mini_card"
                android:layout_marginEnd="@dimen/margin_default_card"
                app:layout_constraintEnd_toEndOf="@id/button_open_news"
                app:layout_constraintTop_toBottomOf="@id/textView_description_news"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_open_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_card"
                android:layout_marginTop="@dimen/margin_default_card"
                android:layout_marginBottom="@dimen/margin_default_card"
                android:text="@string/btn_open_link_news"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_news_date" />

            <ImageView
                android:id="@+id/imageView_btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default_card"
                android:layout_marginBottom="@dimen/margin_default_card"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/content_description_image_share"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_open_news"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/imageView_btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_mini_card"
                android:layout_marginBottom="@dimen/margin_default_card"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/content_description_image_favorite"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView_btn_share"
                app:layout_constraintTop_toTopOf="@+id/button_open_news"
                app:tint="@color/red" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>